--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
             </div>
            <div class="text-light mt-3">
                <p>Все сторонние бренды и логотипы являются зарегистрированными товарными знаками их уважаемых владельцев. Этот веб-сайт не является аффилированным лицом и не является частью каких-либо сетевых операторов / производителей мобильных телефонов, указанных на нашем веб-сайте.</p>
-               <div class="col-4 mx-auto"><a href='{{ url_for('terms') }}' style="color: white" class="col-4 text-decoration-none h5">Пользовательское соглашение: <i class="bi bi-journal-text" style="font-size: 1.8rem"></i></a></div>
+               <div class="col-6 text-center mx-auto"><a href='{{ url_for('terms') }}' style="color: white" class="col-4 text-center text-decoration-none h5">Пользовательское соглашение: <i class="bi bi-journal-text" style="font-size: 1.8rem"></i></a></div>
            </div>
        </div>
     </div>
