--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
     </style>
 
     <div class="text-center repeat_bg" style="padding-top:100px;padding-bottom:100px">
-        <h2 class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold title_after " style="font-family:'Open Sans', sans-serif;">Разблокировка SAMSUNG</h2>
+        <h2 class="col-lg-4 col-sm-7 col-9 col-md-5 mx-auto px-2 fw-bold title_after " style="font-family:'Open Sans', sans-serif; text-shadow: 0px 8px 5px rgba(1, 1, 1, 0.15);">Разблокировка SAMSUNG</h2>
         <div class="col-lg-5 col-xl-4 col-sm-9 col-10 col-md-6 mx-auto">
             <h3 class="mt-4 mb-4" style="font-family:'Source Sans Pro', sans-serif;">TopUnlock - это специальный веб-сайт, который обеспечивает быструю официальную разблокировку устройств всему миру. У вас есть устройство, которое нужно разблокировать? Мы здесь, чтобы помочь!</h3>
             <a href="#" class="animate btn btn-success btn-lg my-2 mx-2 px-4 gap-3" style="background: #00df7f; text-shadow:2px 2px 7px #949494; border: none">Разблокировать</a>
@@ -76,7 +76,7 @@
         </div>
     </div>
 <div class="container mt-4 mx-auto">
-        <div class="title_after text-center" style="font-family:'Open Sans', sans-serif;"><h2>Безопасная и гарантированная разблокировка SAMSUNG за 3 простых шага в нашем сервисе TopUnlock</h2></div>
+        <div class="title_after text-center" style="font-family:'Open Sans', sans-serif;text-shadow: 0px 8px 5px rgba(1, 1, 1, 0.15);"><h2 style="padding: 12px ">Безопасная и гарантированная разблокировка SAMSUNG за 3 простых шага в нашем сервисе TopUnlock</h2></div>
         <div class="text-center mt-3" style="font-family:'Source Sans Pro', sans-serif;"><h3>Быстрая и простая удаленная разблокировка телефона без аннулирования гарантии:</h3></div>
         <div>
         <div class="row mt-5">
@@ -90,7 +90,7 @@
                     </font>
                 </div>
             </div>
-            <div class="row text-center" style="font-family:'Open Sans', sans-serif;"><h4>Предоставьте информацию о вашем устройстве</h4></div>
+            <div class="row text-center" style="font-family:'Open Sans', sans-serif;text-shadow: 0px 8px 5px rgba(1, 1, 1, 0.15);"><h4>Предоставьте информацию о вашем устройстве</h4></div>
             <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Source Sans Pro', sans-serif;"><p align="justify" class="h4">Заполните форму заявки на сайте.
                 Выберите модель телефона который хотите разблокировать. Установите с официального сайта утилиту <a
                         href="https://www.flexihub.com/download.html">FlexiHub</a> для компютера. А так же в соответсвии с выбранной моделью произведите оплату услуги.</p></div>
@@ -105,7 +105,7 @@
                     </font>
                 </div>
             </div>
-            <div class="row text-center " style="font-family:'Open Sans', sans-serif"><h4>Мы производим разблокировку устойства</h4></div>
+            <div class="row text-center " style="font-family:'Open Sans', sans-serif;text-shadow: 0px 8px 5px rgba(1, 1, 1, 0.15);"><h4>Мы производим разблокировку устойства</h4></div>
             <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Source Sans Pro', sans-serif;"><p align="justify" class="h4">После получения платежа с вами свяжется мастер для уточнения деталей. Вам понадобится запустить ранее скаченную утилиту <a
                         href="https://www.flexihub.com/download.html">FlexiHub</a> и подключить ваше устройство по USB к компютеру. В появившемся окне введите токен который отправит мастер.</p></div>
         </div>
@@ -119,7 +119,7 @@
                     </font>
                 </div>
             </div>
-            <div class="row text-center" style="font-family:'Open Sans', sans-serif"><h4>Телефон почти<br>готов</h4></div>
+            <div class="row text-center" style="font-family:'Open Sans', sans-serif;text-shadow: 0px 8px 5px rgba(1, 1, 1, 0.15);"><h4>Телефон почти<br>готов</h4></div>
             <div class="row text-center mt-2 p-4 p-lg-4" style="font-family:'Source Sans Pro', sans-serif;"><p align="justify" class="h4">Вам остается только наблюдать как мастер выполняет свою работу. Можно занятся любыми другими делами. По окнчанию процесса разблокировки мастер вас уведомит. Телефон готов!</p></div>
         </div>
         </div>
